--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -8316,9 +8316,9 @@ li.dropdown.last {
 }
 
 #content-nav {
-  background-color: #fff;
   max-height: 600px;
   transition: max-height 500ms cubic-bezier(0.42, 0, 0.58, 1);
+  background: linear-gradient(to bottom, #fff 0px, #fff 50px, #ddd 50px);
 }
 
 #content-nav #wrapper li {
@@ -8550,7 +8550,7 @@ li.dropdown.last {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   letter-spacing: 2px;
-  float: right;
+  float: right !important;
   margin-left: 0.1em;
 }
 
