create individual widths for each menu column; delete old width formatting

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -94,19 +94,41 @@ body {
 }
 
 .pushdown-menu {
-  padding-left: 10px;
-  padding-right: 10px;
   font-size: 0.8em;
-  padding-top: 0px;
+  padding-top: 10px;
   padding-bottom: 0px;
   // text-transform: capitalize;
   text-decoration: none;
   text-align: left;
   list-style-type: inherit;
-  max-width: 15em;
+  // max-width: 15em;
   padding-left: 0.5em;
   text-indent:-0.6em;
   display: none;
+  border-right: 1px solid black;
+  border-spacing: 10px;
+}
+
+li.pushdown-menu.last {
+  border-right: none;
+}
+#nav-faculty {
+  width: 16em;
+}
+#nav-admissions {
+  width: 17em;
+}
+#nav-academics {
+  width: 17em;
+}
+#nav-campus {
+  width: 15em;
+}
+#nav-alumni {
+  width: 15em;
+}
+#nav-search {
+  width: 1em;
 }
 
 li.dropdown {
@@ -849,10 +871,10 @@ li.dropdown.last {
       left: 66em;
   }
 
-  .mobile-header {
-    margin-right: 1.3em;
-    padding-right: 1.3em !important;
-  }
+  // .mobile-header {
+  //   margin-right: 1.3em;
+  //   padding-right: 1.3em !important;
+  // }
 
   .blue-header {
     height: 10em;
@@ -886,10 +908,10 @@ li.dropdown.last {
       left: 82em;
   }
 
-  .mobile-header {
-    margin-right: 2.2em;
-    padding-right: 2.2em !important;
-  }
+  // .mobile-header {
+  //   margin-right: 2.2em;
+  //   padding-right: 2.2em !important;
+  // }
 }
 
 @media only screen and (min-width:1358px) {
@@ -933,9 +955,9 @@ li.dropdown.last {
     width: 80.5em;
   }
 
-  .mobile-header {
-    margin-right: 2.2em;
-    padding-right: 2.2em !important;
-  }
+  // .mobile-header {
+  //   margin-right: 2.2em;
+  //   padding-right: 2.2em !important;
+  // }
 
 }
