adjust borders between menu columns

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -107,11 +107,9 @@ body {
   display: none;
   border-right: 1px solid black;
   border-spacing: 10px;
+  margin-top: 1.8em;
 }
 
-li.pushdown-menu.last {
-  border-right: none;
-}
 #nav-faculty {
   width: 16em;
 }
