Imports Mick's footer

--- a/development/terminalfour/src/html/includes/footer.html
+++ b/development/terminalfour/src/html/includes/footer.html
@@ -1,73 +1,108 @@
-<footer>
-  <div class="footer">
-  <div class="container">
-          <div class="col-xs-12 col-md-12 col-lg-6 footer-menu">
-              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <p>
-                  <a href="https://msudenver.edu/about" id="Footer-About">About</a><br>
-                  <hr />
-                  <a href="https://msudenver.edu/programs" id="Footer-DegreePrograms">Degree Programs</a><br>
-                  <hr/>
-                  <a href="https://msudenver.edu/admissions/cost/" id="Footer-Cost">Cost</a><br>
-                  <hr/>
-                  <a href="https://msudenver.edu/financialaid/"id="Footer-FinancialAid">Financial Aid</a><br>
-                  <hr/>
-                  <a href="http://www.tivolistation.com/"id="Footer-Bookstore" target="_blank">Bookstore</a>
-                  <hr class="hide-hr"/>
-                </p>
+<!-- ** Site wide footer ** -->
+ <footer>
+      <section class="footer-container">
+          <div class="footer-promos-row">
+              <!-- Footer promo -->
+              <div class="footer-promo">
+                  <div class="footer-promo-bg">
+                      <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
+                      <hr />
+                      <p class="footer-promo-text">The University is currently conducting a nationwide search for its next president. </p>
+                      <a class="btn homepage-btn footer-btn">Learn more</a>
+                  </div>
               </div>
-              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <p>
-                  <a href="https://msudenver.edu/admissions/takeatour/" id="Footer-Tours">Tours</a><br>
-                  <hr/>
-                  <a href="https://msudenver.edu/visit/quickdirections/" id="Footer-Directions">Directions</a><br>
-                  <hr/>
-                  <a href="https://myatlascms.com/map/?id=225#!ct/2317?mc/39.74257855991715,-105.0048565864563?z/16" id="Footer-Parking">Parking</a><br>
-                  <hr/>
-                  <a href="https://www.msudenverjobs.com/postings/search" id="Footer-Careers" target="_blank">Careers</a><br>
-                  <hr/>
-                  <a href="https://msudenver.edu/campussafetyandcrime/">Safety</a>
-                </p>
+              <!-- // Footer promo -->
+              <!-- Footer promo -->
+              <div class="footer-promo">
+                  <div class="footer-promo-bg">
+                      <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
+                      <hr />
+                      <p class="footer-promo-text">The University is currently conducting a nationwide search for its next president. </p>
+                      <a class="btn homepage-btn footer-btn">Learn more</a>
+                  </div>
               </div>
-              <br/><br/>
-              <i class="social-mobile">
-               <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-               <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-               <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-              </i>
-              <br/><br/>
-          </div>
+              <!-- // Footer promo --><!-- Footer promo -->
+              <div class="footer-promo">
+                  <div class="footer-promo-bg">
+                      <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
+                      <hr />
+                      <p class="footer-promo-text">The University is currently conducting a nationwide search for its next president. </p>
+                      <a class="btn homepage-btn footer-btn">Learn more</a>
+                  </div>
 
-          <div class="col-xs-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
+              </div>
+              <!-- // Footer promo -->
 
-                <p>
-                  <a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a><br><br>
-                  <a href="https://msudenver.edu/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
-                  <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
-                  <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
-                </p>
-                <i class="social-non-mobile">
-                 <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-                 <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-                 <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                 <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-                 <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-                 <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-               </i>
-          </div>
+          </div><!-- // .footer-promos-row (row) -->
+          <hr class="footer-row-hr" />
+          <div class="footer-menu-row">
+             <div class="footer-campus-info visible-xs">
 
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 footer-logo">
-            <a href="https://msudenver.edu"> <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"></a><br><br>
-          <a href="https://msudenver.edu"><small>&copy; MSU Denver</small></a>
+                    <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
+                    <p><a href="javascript:void(0)"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a></p>
+                    <p><a href="javascript:void(0)"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a></p>
+                    <p><a onclick="javascript:void(0)" href="javascript:void(0)"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
 
-            <a href="/privacy"><small>Privacy Statement</small></a>
-            <br>
-          </div>
-        </div>
-      </div>
-  </div>
 
+              </div><!-- .campus-info  -->
+              <div class="footer-links">
+                  <div class="footer-links-row">
+                      <div class="footer-links-col ">
+                        <ul class="footer-nav list-unstyled">
+                            <li><a href="javascript:void(0)" id="Footer-About">About</a></li>
+                            <li><a href="javascript:void(0)" id="Footer-DegreePrograms">Degree Programs</a></li>
+                            <li><a href="javascript:void(0)" id="Footer-Cost">Cost</a></li>
+                            <li><a href="javascript:void(0)" id="Footer-FinancialAid">Financial Aid</a></li>
+                            <li><a href="javascript:void(0)" id="Footer-Bookstore" target="_blank">Bookstore</a></li>
+                        </ul>
+                      </div>
+                      <div class="footer-links-col">
+                        <ul class="footer-nav list-unstyled">
+                            <li><a href="javascript:void(0)" id="Footer-Tours">Tours</a></li>
+                            <li><a href="javascript:void(0)" id="Footer-Directions">Directions</a></li>
+                            <li><a href="javascript:void(0)" id="Footer-Parking">Parking</a></li>
+                            <li><a href="javascript:void(0)" id="Footer-Careers" target="_blank">Careers</a></li>
+                            <li><a href="javascript:void(0)">Safety</a></li>
+                        </ul>
+                      </div>
+                      <div class="social-mobile footer-links">
+                          <ul class="list-unstyled footer-social hidden-md hidden-lg">
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-flickr fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a></li>
+                          </ul>
+                      </div>
+                  </div><!-- // .footer-links-row -->
+
+              </div><!-- // .footer-links (col) -->
+
+              <div class="footer-campus-info hidden-xs">
+
+                    <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
+                    <p><a href="javascript:void(0)"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a></p>
+                    <p><a href="javascript:void(0)"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a></p>
+                    <p><a onclick="javascript:void(0)" href="javascript:void(0)"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+                    <ul class="list-unstyled footer-social">
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-flickr fa-2x"></i></a></li>
+                            <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a></li>
+                    </ul>
+
+              </div><!-- .campus-info  -->
+
+              <div class="footer-logo">
+                  <p><a href="javascript:void(0)"> <img src="style-assets/media/msudenver-informal_logo.png"></a></p>
+                  <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
+
+              </div><!-- .footer-logo -->
+          </div><!-- .row -->
+
+
+      </section><!-- footer .container -->
 </footer>
