--- a/development/terminalfour/src/html/includes/homepage-ryor.html
+++ b/development/terminalfour/src/html/includes/homepage-ryor.html
@@ -12,6 +12,6 @@
             
     </div>     
     
-    <a href="javascript:void(0)" class="btn homepage-btn">Read his full story<i class="fa fa-angle-right"></i></a> 
+    <a href="javascript:void(0)" class="btn homepage-btn">Read his full story <i class="fa fa-angle-right fa-lg"></i></a>  
 </section>
 <!-- ** // Homepage Run Your Own Road - RYOR ** -->
