--- a/development/terminalfour/src/html/includes/homepage-events.html
+++ b/development/terminalfour/src/html/includes/homepage-events.html
@@ -71,7 +71,7 @@
             <!-- ** // Event ** -->
             
         </div><!-- // .home-events-row -->
-        <a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a>
+        <a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events <i class="fa fa-angle-right fa-lg"></i></a>
     </div><!-- // .home-events (col) -->
     
 </section>
