--- a/www-root/includes/homepage-news.html
+++ b/www-root/includes/homepage-news.html
@@ -41,7 +41,7 @@
                      </div><!-- ./ .news-feature-item -->
                 </div><!-- ./ .news-feature-items-wrap -->    
             </div><!-- ./ .news-feature-item --> 
-            <a href="javascript:void(0)" class="btn homepage-btn">Read more roadrunner stories</a>
+            <a href="javascript:void(0)" class="btn homepage-btn">Read more roadrunner stories <i class="fa fa-angle-right fa-lg"></i></a>
         </div><!-- ./ .news-feature-items -->
         
     </div><!-- ./ .homepage-news-outer-col -->
