User feedback fixes

--- a/development/terminalfour/src/sass/msu-partials/_footer.scss
+++ b/development/terminalfour/src/sass/msu-partials/_footer.scss
@@ -60,7 +60,12 @@ footer {
     margin-bottom: 16px;
     margin-bottom: torem(16);
 }
-
+.footer-campus-info {
+    .fa { 
+        width: 5%;
+        text-align: center;
+    }
+}
 .footer-links-row {
     @include make-row();
 }
