--- a/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
@@ -4,6 +4,7 @@
     margin-top: torem(8);
     margin-bottom: toem(8);
     margin-bottom: torem(8);
+    padding: 0;
     position: relative;
     .feature-heading { 
         
@@ -38,6 +39,7 @@
 
 .ryor-student-image {
     @include img-responsive ;
+   
     position: relative;
     top: 0;
     left: 0; 
@@ -52,7 +54,7 @@
     top: 0;
     left: 0;
     z-index: 1;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+80,1+100 */
+    /* http://colorzilla.com/gradient-editor */
     background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 80%, rgba(0,0,0,1) 100%); 
     background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 80%,rgba(0,0,0,1) 100%); 
     background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 80%,rgba(0,0,0,1) 100%); 
@@ -60,8 +62,13 @@
 .ryor-student {
     padding-top: 32px;
     padding-top: torem(32);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .ryor-image {
+     background: url('../media/RYOR_bg.jpg') no-repeat ;
     color: $white;
     overflow: visible;
     svg { 
@@ -103,6 +110,7 @@
     }
     .ryor-image {
         @include make-md-column(5);
+        text-align: right;
     }
     .ryor-student {
         @include make-md-column(7);
