make hamburger open/close menu when clicked

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -206,6 +206,7 @@ $('.navbar-toggle').click(function(){
    $('.search-input-mobile').hide();
    $('.fa-bars').css('background-color', '#005fae');
    $('.glyphicon-search-mobile').css('background-color', 'transparent');
+   $('#content-nav').toggleClass('in');
 });
 
 // when menu item clicked, open/close pushdown menu
