--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -89,9 +89,9 @@
 }
 //begin expanding search css
 #content-nav {
-  max-height: 600px;
+  background-color: #fff;
+  max-height: none;
   transition: max-height 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
-  background: linear-gradient(to bottom, #fff 0px,#fff 50px, #ddd 50px);
 }
 
 #content-nav #nav-search-close {
@@ -430,6 +430,7 @@
     display: block;
     padding-left: 0px;
     width: 101%;
+    padding-top: 5em;
   }
   .left-addon input {
     padding-top: 20px !important;
@@ -555,6 +556,9 @@
 
   .blue-header {
     height: 10em;
+  }
+  #content-nav {
+    background: linear-gradient(to bottom, #fff 0px,#fff 50px, #ddd 50px);
   }
 }
 
